- Upgrade virtualbox-ose to 5.1.18.
- Upgrade netatalk to 3.1.11.
- Upgrade syncthing to 0.14.25.
- Upgrade tzdata to 2017b.
- Upgrade jQuery to 3.2.0.
- Upgrade samba to 4.6.1.

Fixes:
- Fix escaped characters in output.
- Fix support added for pools with more than 10 vdevices.
- Fix support added for vdevices with more than 10 devices.
- Fix exception handling improved.
- Fix config for DNS server configuration.
- Fix sending reports.
- Fix proper start nfsd.
- Fix identify boot/configuration device.
- Fix create htpasswd file only when web service is enabled.
- Fix system screensaver.
- Fix large file downloads in file manager.
- Fix don't add domain parameter to msmtp configuration when domain is empty.
- Fix suppress message being displayed twice.
- Fix single and double quotes in user passwords.
- Fix hide ntp parameter when ntp is not used.

Permanent restrictions:
- No more x86 versions of NAS4Free 11 series will be made, 32-bits users need 10.3 than.
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.
- Tool iperf3 is not backwards compatible with iperf2.x. you must upgrade your client.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.
- IE11 and Edge browser does not operate correctly with novnc. Enter & Escape button problematic,
  this will be fixed at a later release, use Chrome or other browser or connect with putty client.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
